# rubiks-cube-rl

./: .env  .gitignore  README.md  VAST_AI_GUIDE.md  package.json  sync-checkpoints.sh
api/: package.json  tsconfig.json
api/src/: index.ts  router.ts  types.ts  ws.ts
api/src/lib/: python-client.ts
backend/: pyproject.toml
backend/src/: main.py
backend/src/cube/: __init__.py  environment.py  simulator.py
backend/src/rl/: __init__.py  agent.py  network.py  search.py  trainer.py
backend/src/server/: ipc.py
backend/tests/: test_cube.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CubeVisualizer.tsx  MetricsChart.tsx  TrainingDashboard.tsx  TrainingLogs.tsx
frontend/src/store/: training.ts
frontend/src/types/: api.ts
scripts/: start_cloud.sh  sync_to_vast.sh  vast_setup.sh
