[project]
name = "rubiks-cube-rl"
version = "0.1.0"
description = "Rubik's Cube RL training with PyTorch CUDA"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "websockets>=12.0",
    "torch>=2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
python-downloads = "never"
